--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,9 +41,13 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:21.0.1'
     implementation "com.google.android.gms:play-services-gcm:16.0.0"
 
+    implementation 'de.hdodenhof:circleimageview:2.1.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
     implementation 'org.jetbrains:annotations:15.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
