--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FinalYearProject">
-        <activity android:name=".Activities.AddAdmin.AddAdminActivity"></activity>
+        <activity android:name=".Activities.AboutInstitution"></activity>
+        <activity android:name=".Activities.AddAdmin.AddAdminActivity" />
         <activity android:name=".Activities.ChooseIntitution.ChooseInstitutionActivity" />
         <activity android:name=".Activities.Launch.RegisterForInstitutionActivity" />
         <activity android:name=".Activities.Launch.RegisterInstitutionActivity" />
